--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "hardhat": "^2.19.2",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.0",
-    "typechain": "^8.3.0"
+    "typechain": "^8.3.0",
+    "prettier-plugin-solidity": "^1.2.0",
+    "solhint": "^4.0.0"
   }
 }
