--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
     "chai": "^4.2.0",
     "dotenv": "^16.3.1",
-    "ethers": "^6.4.0",
+    "ethers": "^6.9.0",
     "hardhat": "^2.19.2",
     "hardhat-deploy": "^0.11.44",
     "hardhat-gas-reporter": "^1.0.8",
